# TEST_TASK

./: CMakeLists.txt  README.md  main.cpp  my_service.cpp  my_service.h
